--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <link href="/assets/lib/font-awesome/css/font-awesome.min.css?v=4.6.2" rel="stylesheet" type="text/css" />
   <link href="/assets/css/main.css?v=5.1.1" rel="stylesheet" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title> 404 Not Found | 辛西亞的技能樹 </title>
+  <title> 404 Not Found | 偷薪水的小偷 </title>
 </head>
 <body  class="no-found-page">
   <div class="text-center">
